@@ -1,7 +1,6 @@
 package uk.gov.hmcts.reform.sscs.service;
 
 import static java.util.Objects.nonNull;
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.EventType.*;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.State.READY_TO_LIST;
@@ -212,7 +211,7 @@ public class SubmitAppealService {
 
         return caseDetailsList.stream()
                 .map(convertAIntoBService::convert)
-                .collect(toList());
+                .toList();
     }
 
     private IdamTokens getUserTokens(String oauth2Token) {
